# code-scanner-back

./: .gitignore  README.md
app/db_migrator/: Dockerfile  alembic.ini  config.py  data_initializer.py  requirements.txt  run_migrations.py
app/db_migrator/alembic/: env.py
app/identity-service/: Dockerfile  config.py  database.py  dependencies.py  main.py  requirements.txt
app/monitoring/: loki-config.yaml  prometheus-config.yml  promtail-config.yml
app/nginx/: Dockerfile  entrypoint.sh
app/shared_lib/: setup.cfg
app/shared_lib/shared_lib/: __init__.py
app/shared_lib/shared_lib/auth/: __init__.py  service_credential_client.py  token_exceptions.py  token_utils.py
app/shared_lib/shared_lib/db/: db.py
app/shared_lib/shared_lib/db/models/: base.py  update_version.py  user.py  user_token.py
app/shared_lib/shared_lib/db/repositories/base/: postgres_base_repository.py  postgres_cached_base_repository.py
app/shared_lib/shared_lib/db/repositories/update_version/: update_version_repository.py
app/shared_lib/shared_lib/db/repositories/user/: user_repository.py  user_role_repository.py
app/shared_lib/shared_lib/db/repositories/user_token/: user_token_repository.py
app/shared_lib/shared_lib/s3/: s3_client.py
app/updates-service/: Dockerfile  config.py  database.py  dependencies.py  main.py
app/user-service/: Dockerfile  config.py  dependencies.py  main.py
docker/: .env.sample  docker-compose.monitoring.yml  docker-compose.yml
tests/: conftest.py
tests/fixtures/: auth.py  user_token.py
tests/user-service/: test_user_endpoints.py
(+27 files in other folders)
