[metadata]
name = shared_lib
version = 1.0.0
author = Pavlyuk Gleb
description = All shared code for services

[options]
zip_safe=False
packages = find:
python_requires = >= 3.9
install_requires =
    sqlalchemy
    pymongo
    pydantic
    PyJWT>=2.8.0,<3.0.0
    fastapi>=0.100.0,<0.101.0
    aioboto3>=9.0.0
    loguru
    httpx